# interval-patterns

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  cabal.project  fourmolu.yaml  hie.yaml  interval-patterns.cabal  timeframes.cabal
src/Data/: Calendar.hs  Interval.hs  OneOrTwo.hs  Suspension.hs  Timeframe.hs  UpToThree.hs
src/Data/Interval/: Adjacency.hs  Borel.hs  Covering.hs  Layered.hs  Layers.hs  Overlap.hs  Set.hs  Types.hs
tests/: Main.hs
