cabal-version: 3.6
name: interval-patterns
version: 0.0.9.0
author: Melanie Brown
maintainer: brown.m@pm.me
license: BSD-3-Clause
license-file: LICENSE
homepage: https://github.com/cigsender/interval-patterns
bug-reports: https://github.com/cigsender/interval-patterns/issues
extra-source-files: CHANGELOG.md
copyright: 2022 Melanie Brown

common interval-patterns
  build-depends:
    , base >= 4.11 && < 5
    , containers
    , relude >= 1.0.0.1 && < 1.1
    , time
    , time-compat >= 1.9.6.1 && < 1.10
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
  ghc-options: -Wall -Wcompat -Wno-unticked-promoted-constructors
  mixins:
    base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

library
  import: interval-patterns
  hs-source-dirs: src
  exposed-modules:
    Data.Interval
    Data.Interval.Layers
    Data.Interval.Covering
    Data.OneOrTwo
    Data.Suspension
    Data.Timeframe

test-suite tests
  import: interval-patterns
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
