cabal-version:      3.0
name:               interval-patterns
version:            0.8.2
author:             Melanie Phoenix Brown
synopsis:           Intervals, and monoids thereof
category:           Algebra, Charts, Data Structures, Math, Statistics
maintainer:         brown.m@proton.me
license:            BSD-3-Clause
license-file:       LICENSE
homepage:           https://github.com/mixphix/interval-patterns
bug-reports:        https://github.com/mixphix/interval-patterns/issues
extra-source-files: CHANGELOG.md
copyright:          2022-2026 Melanie Phoenix Brown
description:
  Please see the README at https://github.com/mixphix/interval-patterns

common interval-patterns
  build-depends:
    , base                >=4.11    && <5
    , bolt
    , control-block
    , containers          >=0.6.7   && <0.9
    , deepseq             >=1.4.8   && <1.6
    , hashable            >=1.4.2   && <1.6
    , heaps               >=0.4     && <0.5
    , indexed-traversable >=0.1.4   && <0.2
    , time                >=1.9.3   && <2
    , time-compat         >=1.9.6.1 && <1.11

  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DerivingStrategies
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    TypeFamilies
    ViewPatterns

  ghc-options:        -Wall -Wcompat -Wno-unticked-promoted-constructors

library
  import:          interval-patterns
  hs-source-dirs:  src
  exposed-modules:
    Data.Calendar
    Data.Interval
    Data.Interval.Borel
    Data.Interval.Layers
    Data.OneOrTwo
    Data.Timeframe

test-suite tests
  import:         interval-patterns
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  build-depends:
    , hspec
    , interval-patterns
    , parsec
    , QuickCheck
    , text
